--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,19 @@ dependencies:
   get:
   flutterwave: ^1.0.1
   google_fonts:
+  mockito:
+  firebase_core: 1.7.0
+  firebase_auth: 3.1.2
+  modal_progress_hud: ^0.1.3
+  cloud_firestore: ^2.5.3
+  intl: 0.17.0
+  firebase_messaging: 9.1.3
+  flutter_local_notifications: 5.0.0+4
+  firebase_storage: 8.0.5
+  image_picker: 0.7.4
+  shared_preferences: 2.0.5
+  photo_view: 0.12.0
+
 
 
 
